[project]
name = "diffusion-pretrained"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
