[project]
name = "diffusion-pretrained"
version = "0.1.0"
description = "Audio codec inference with EnCodec"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "encodec>=0.1.1",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]
